fixed banner margin on mobile

--- a/styles/projectWorkPage.module.scss
+++ b/styles/projectWorkPage.module.scss
@@ -64,8 +64,12 @@
     height: auto;
     aspect-ratio: 16/9;
     position: relative;
-    margin: 0 2rem;
+    margin: 0;
     background-color: var(--blue-20);
+
+    @media (min-width: 768px) {
+      margin: 0 2rem;
+    }
 
     &__image {
       transform: scale(1.1);
